# AiDoc

./: .gitignore
backend/: Dockerfile  pyproject.toml
backend/scripts/: guest_setup.py  runner.sh
backend/src/: config.py  db.py  dependency.py  encoder.py  main.py  qdrant.py  schema.py  utils.py
backend/src/api/: pdf.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  store.ts
frontend/src/components/: FileList.css  FileList.tsx  Login.tsx  Logout.tsx
frontend/src/components/ShowFile/: AskYouPdf.tsx  PdfViewer.tsx  ShowFile.tsx  store.ts
frontend/src/features/login/: Login.tsx  authSlice.ts
frontend/src/layout/: mainLayout.tsx  sideMenu.tsx  store.ts
frontend/src/pages/: Upload.tsx
frontend/src/services/: api.ts
frontend/src/utils/: pdfjsUtils.ts
scripts/: aidoc-backend-setup.sh
